--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 /* Variables */
 
 :root {
+  --color-white: #fff;
   --color-win: #78CF82;
   --color-lose: #D94545;
   --color-start: #5b85b7;
@@ -23,14 +24,52 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+/* DRY rules */
+
+body,
+#overlay,
+.main-container {
+  flex-direction: column;
+}
+
+body,
+#overlay,
+.main-container,
+.keyrow {
+  display: flex;
+}
+
+#overlay,
+.keyrow {
+  justify-content: center;
+}
+
+#overlay,
+.title,
+.start a,
+.letter.show,
+.chosen,
+.wrong {
+  color: var(--color-white);
+}
+
+button,
+.letter {
+  font-size: var(--font-size-medium);
+}
+
+#overlay,
+button,
+.letter {
+  border-radius: 5px;
+}
+
 body {
   justify-content: space-evenly;
-  flex-direction: column;
-  display: flex;
   height: 100vh;
 }
 
-li, ol, ul {
+ul, ol, li {
   padding: 0;
   display: inline-block;
 }
@@ -39,7 +78,6 @@ h2 {
   margin: 0;
   text-transform: uppercase;
   font-size: var(--font-size-large);
-  margin: 0;
 }
 
 h1 {
@@ -51,9 +89,7 @@ button {
   border: 1px solid transparent;
   padding: .5rem 1rem;
   color: var(--color-keys);
-  font-size: var(--font-size-medium);
   background-color: var(--color-keys-light);
-  border-radius: 5px;
   -webkit-transition: var(--transition);
   -o-transition: var(--transition);
   transition: var(--transition);
@@ -66,8 +102,6 @@ button {
 }
 
 .main-container {
-  display: flex;
-  flex-direction: column;
   justify-content: space-around;
   height: 100%;
   max-height: 900px;
@@ -81,6 +115,7 @@ button {
 
 #phrase ul li{
   margin-top: 15px;
+  user-select: none;
 }
 
 /* Title */
@@ -89,102 +124,51 @@ button {
   color: #3a3f58;
 }
 
-
 /* Phrase */
 
 .letter {
-  font-size: var(--font-size-medium);
   height: 65px;
   width: 65px;
   padding: 20px 1px 0 1px;
   margin-right: 2px;
   color: transparent;
   background: var(--color-neutral-light);
-  border-radius: 5px;
 }
 
 .space {
   width: 15px;
 }
 
-
-
 .show {
-  color: #fff;
   background-color: #4ac0d5;
   font-size: 20px;
-  height: 65px;
-  width: 65px;
-  padding: 20px 1px 0 1px;
   margin-right: 2px;
-  border-radius: 5px;
-  -webkit-animation-duration: .5s;
-  animation-duration: .5s;
+  animation: flip .4s;
 }
-
 
 /* Keyboard */
 
-.keyrow {
-  display: flex;
-  justify-content: center;
-}
-
 .chosen {
   background: #3a3f58;
-  border-radius: 5px;
-  font-size: var(--font-size-medium);
-  color: #FFFFFF;
 }
 
 .wrong {
   background: #f7a964;
-  color: #FFFFFF;
+  animation: shake .5s;
 }
-
-.btn__reset {
-  padding: 16px;
-  margin: 50px auto;
-  background: #f7a964;
-  border-radius: 5px;
-  font-size: 20px;
-  cursor: pointer;
-  border-bottom: solid 4px rgba(0, 0, 0, .3);
-  border-right: solid 3px rgba(0, 0, 0, .3)
-}
-
-.btn__reset:active {
-  padding: 14px 16px 16px 14px;
-  border-bottom: solid 4px rgba(0, 0, 0, 0);
-  border-right: solid 3px rgba(0, 0, 0, 0);
-}
-
 
 /* Overlay */
 
 #overlay {
-  display: flex;
-  flex-direction: column;
   position: fixed;
-  color: #FFFFFF;
-  justify-content: center;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  border-radius: 5px;
-}
-
-.title {
-  color: #FFF;
 }
 
 .start {
   background-color: #3a3f58;
-}
-
-.start a {
-  color: #fff;
 }
 
 .win {
@@ -201,4 +185,30 @@ button {
 
 .lose a {
   color: var(--color-lose);
+}
+
+/* Animations */
+
+@keyframes shake {
+  from {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  to {
+    transform: translate3d(0);
+  }
+}
+
+@keyframes flip {
+  from {
+    transform: rotateX(180deg);
+  }
+
+  to {
+    transform: rotateX(360deg);
+  }
 }
